# purr

./: .gitattributes  .gitignore  BOOTSTRAP.md  IMPLEMENTATION_STATUS.md  KEYWORDS.md  M4_IMPLEMENTATION.md  MANIFESTO.md  MISSING_REQUIREMENTS.md  README.md  SPEC.md  hello.pu  nul  test_m2.pu
compiler/purrc0/runtime/: CMakeLists.txt  purr_runtime.c  purr_runtime.h
docs/: IMPLEMENTATION_PLAN_FINAL.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  M6_GAUNTLET.md  M7_STRUCTS.md  M8_ENUMS.md  PLAN.md  purr_v1_spec.md
examples/: backfill_test.pu  bench_list_operations.pu  control_flow.pu  enums.pu  ffi_test.pu  functions.pu  gauntlet_adt1_queue.pu  gauntlet_adt2_retry_fsm.pu  gauntlet_adt3_frame_encoder.pu  gauntlet_adt4_prefix_router.pu  gauntlet_adt5_lease_manager.pu  gauntlet_binary_search.pu  gauntlet_bloom.pu  gauntlet_fizzbuzz.pu  gauntlet_gcd_lcm.pu  gauntlet_rate_limiter.pu  gauntlet_ring_buffer.pu  hello.pu  namespace_main.pu  namespace_math.pu  namespace_utils.pu  operators.pu  structs.pu  test_actor_containers.purr  test_actor_simple.c  test_actor_simple.pu  test_bench_simple.bench  test_containers.bench  test_containers.purr  test_empty_bench.bench  test_minimal.bench  test_minimal2.bench  test_simple.pu  test_simple_containers.purr  test_struct_only.purr  validate_basic.c  validate_basic.pu  validate_fizzbuzz.pu  validate_integers.pu  validate_simple_fizzbuzz.pu  (+2 more)
purrc/: README.md  main.pu
runtime/: actor.pu  core.pu  purr_runtime.c  purr_runtime.h  stream.pu
scripts/: run-emitter.sh
spec/: BOOTSTRAP.md  KEYWORDS.md  MISSING_REQUIREMENTS.md  (+1 more)
(+164 files in other folders)
